# tap_launcher

./: .gitignore  AGENTS.md  FINAL-STATUS.md  README.md  STATUS.md  ai.project.toml  main.py  pyproject.toml  tap
config/: tap-launcher.toml.example
docs/: 20251011-162154-intro.md  20251011-175536-elaboration-tap_detector.md  20251011-195938-tap_detector-implementation.md  20251011-232917-tap_launcher-implementation.md  20251011-implementation-summary.md  20251012-003009-improvements.md  20251012-004722-tap_launcher-improvements.md  20251013-160723-tap-timer-from-second-key.md  20251013-162338-elaboration-long_taps.md  20251013-230726-tap_detector-improvements.md  20251025-072948-log-new_tap_definition.md  20251101-044641-change-plan-better-daemonize.md  key-mapping.md  quickstart.md  tap-launcher-usage.md  test-keyboard.sh  troubleshooting-keyboard.md
docs/20251024-052851-proposal-wayland_support/: ABC-VS-PROTOCOL.md  DEPLOYMENT-SUMMARY.txt  PROJECT-STRUCTURE-v2.md  QUICK-REFERENCE.md  README-SNIPPET.md  README.md  V1-TO-V2-CHANGES.md  WAYLAND-DEPLOYMENT.md  WAYLAND-SUPPORT-PROPOSAL-v2.md  WAYLAND-SUPPORT-PROPOSAL.md  poc-evdev-test.py  wayland-backend-design-v2.md  wayland-backend-design.md
docs/20251024-052851-proposal-wayland_support/backend-examples/: 01-base.py  02-pynput-backend.py  03-evdev-backend-simplified.py  04-integration-example.py  README-v2.md  README.md
docs/20251029-200001-proposal-key_suppression/: 20251027-070727-log-fail-ordinal_keys_support.md  20251027-163346-log-test_key_suppression_summary.md  20251027-201557-log-test_key_suppression_summary_final.md  20251029-201331-doc-SETUP-PERMISSIONS.md  20251029-205008-IMPLEMENTATION-PLAN.md  20251029-233144-KEYCODE-PROBLEM-ANALYSIS.md  20251029-233151-UINPUT-CLEANUP.md  20251030-172132-MULTIPLE-KEYBOARDS-ANALYSIS.md  test_key_suppression.py  test_key_suppression_evdev.py
docs/ai/: project-rules.md
docs/decisions/: 2026-05-02-daemon-lock-probe-pattern.md  2026-05-02-revert-to-fcntl-flock.md  2026-05-03-detect-with-active-launch.md  2026-05-03-fix-daemon-shutdown-empty-lines.md
src/common/: __init__.py  key_normalizer.py  logging_utils.py  runtime_state.py  tap_monitor.py  verbose_formatter.py  version.py
src/common/backends/: __init__.py  base.py  detector.py  device_listing.py  evdev_backend.py  key_mapping.py  pynput_backend.py
src/common/backends/evdev_backend/: __init__.py  device_manager.py  event_router.py  key_state.py  parser.py  (+3 more)
src/detector/: __init__.py  constants.py  formatter.py  main.py
src/launcher/: __init__.py  command_executor.py  config_loader.py  daemon_manager.py  hotkey_matcher.py  launcher_monitor.py  main.py  models.py  monitor.py
src/tap_detector/: __init__.py  constants.py  formatter.py  key_normalizer.py  main.py  tap_monitor.py
src/tap_launcher/: __init__.py  command_executor.py  config_loader.py  daemon_manager.py  hotkey_matcher.py  launcher_monitor.py  main.py  models.py
