[project]
name = "tap-launcher"
version = "0.1.0"
description = "Tap Launcher: Application for detecting keyboard tap combinations and launching commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.7.7",
    "typer>=0.9.0",
]

[project.scripts]
tap-detector = "tap_detector.main:app"
tap-launcher = "tap_launcher.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/tap_detector", "src/tap_launcher"]
